--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ need to go use "x64 Native Tools Command Prompt for VS" instead of regular cmd
 
 cmake --build build --config Release -j 16 (number of cpu cores)
 
-.\build\bin\llama-quantize.exe hercule_poirot_f16.gguf hercule_poirot_Q4_K_M.gguf Q4_K_M
+.\build\bin\llama-quantize.exe hercule_poirot_f16_qwen3.gguf hercule_poirot_Q4_K_M_qwen3.gguf Q4_K_M
 
 grab this model (hercule_poirot_Q4_K_M.gguf) and put it in "persona-chat\customModels" and create a corresponding modelFile
 
