Add S3 upload adapter and boto3 requirement
Add upload_adapter.py: a CLI tool to upload a local adapter directory to S3 using boto3. It walks the given path, uploads files under a timestamped prefix (loras/{character}/{YYYYMMDD_HHMM}), supports --character, --path and --bucket flags and falls back to S3_BUCKET env var. Also adds boto3 to requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pip install datasets
 pip install peft
 pip install bitsandbytes
 pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130
+pip install boto3
 
 
 instructions:
